--- a/app/routes/posts/aoc-2021.md
+++ b/app/routes/posts/aoc-2021.md
@@ -6,9 +6,14 @@ meta:
 
 # Advent of Code 2021
 
-I'll be posting here my thought process and solutions for AoC 2021. See ya!
+```
+                      ~   ~  ~ ~~ ~~~~~~~~~~~~~~~
+                                           ..''''
+```
 
-## --- Day 1: Sonar Sweep ---
+I'll be posting here my solutions for [AoC 2021](https://adventofcode). Follow along!
+
+## --- Day 1: Sonar Sweep --- [[link]](https://adventofcode.com/2021/day/1)
 
 For part 1, we're given a list of numbers and are asked how many times the numbers increase relatively to the previous number. The solution is pretty straightforward: loop over the list, compare each item with the previous, count the occurrence where it's greater than the previous:
 
@@ -23,7 +28,7 @@ with open(Path(__file__).parent / "input.txt") as file:
     return increases
 ```
 
-For part 2, we're asked to consider the sum of a **three-measurement sliding window**. I thought I would need a `deque` to keep a list of 3 values, or use list comprehension + slices, when I remembered about [these recipes](https://docs.python.org/3/library/itertools.html) in the python docs. I copied over an implementation for a generator of these windows and used for my solution:
+For part 2, we're asked to consider the sum of a **three-measurement sliding window**. I thought I would need a `deque` to keep a list of 3 values, or use list comprehension + slices, when I remembered about [these recipes](https://docs.python.org/3/library/itertools.html#itertools-recipes) in the python docs. I copied over an implementation for a generator of these windows and used for my solution:
 
 ```python
 def sliding_window(iterable, n):
@@ -46,5 +51,7 @@ with open(Path(__file__).parent / "input.txt") as file:
         previous = window
     return increases
 ```
+
+For the next days, I'm adding [`more-itertools`](https://pypi.org/project/more-itertools/) to have these recipes readily available!
 
 Check my repository for the [final code for day 1](https://github.com/rbusquet/advent-of-code/blob/main/2021/01/day1.py). See y'all tomorrow!
