--- a/app/routes/posts/aoc-2021.md
+++ b/app/routes/posts/aoc-2021.md
@@ -2,6 +2,7 @@
 meta:
   title: Advent of Code 2021
   date: "2021-12-01"
+  description: Solutions + general comments for Advent of Code 2021
 ---
 
 # Advent of Code 2021
