--- a/app/routes/posts/aoc-2021.md
+++ b/app/routes/posts/aoc-2021.md
@@ -56,3 +56,50 @@ with open(Path(__file__).parent / "input.txt") as file:
 For the next days, I'm adding [`more-itertools`](https://pypi.org/project/more-itertools/) to have these recipes readily available!
 
 Check my repository for the [final code for day 1](https://github.com/rbusquet/advent-of-code/blob/main/2021/01/day1.py). See y'all tomorrow!
+
+## --- Day 2: Dive --- [[link]](https://adventofcode.com/2021/day/2)
+
+Today, we're piloting a submarine, which has a planned course defined by a series of instructions (our input):
+
+- `forward X` **increases** the horizontal position by `X` units.
+- `down X` **increases** the depth by `X` units.
+- `up X` **decreases** the depth by `X` units.
+
+I think this looks neat with Python 3.10's structural pattern matching:
+
+```python
+horizontal = depth = 0
+for command in file:
+    match command.split(" "):
+        case ["forward", distance]:
+            horizontal += int(distance)
+        case ["up", distance]:
+            depth -= int(distance)
+        case ["down", distance]:
+            depth += int(distance)
+return horizontal * depth
+```
+
+The puzzle claim that the result doesn't make sense, and when checking the submarine manual we notice the intructions track not only horizontal position and depth, but also **aim**, and the commands are also entirely different:
+
+- `down X` **increases** your aim by `X` units.
+- up X **decreases** your aim by `X` units.
+- forward X does two things:
+  - It **increases** your horizontal position by `X` units.
+  - It **increases** your depth by your aim multiplied by `X`.
+
+The solution looks a lot like part 1, but tracking the new `aim` variable:
+
+```python
+horizontal = depth = aim = 0
+for command in file:
+    match command.split(" "):
+        case ["forward", distance]:
+            horizontal += int(distance)
+            depth += int(distance) * aim
+        case ["up", distance]:
+            aim -= int(distance)
+        case ["down", distance]:
+            aim += int(distance)
+return horizontal * depth
+```
