--- a/app/routes/posts/aoc-2021.md
+++ b/app/routes/posts/aoc-2021.md
@@ -14,7 +14,11 @@ meta:
 
 I'll be posting here my solutions for [AoC 2021](https://adventofcode). Follow along!
 
-## --- Day 1: Sonar Sweep --- [[link]](https://adventofcode.com/2021/day/1)
+### Table of contents
+
+## Day 1: Sonar Sweep
+
+https://adventofcode.com/2021/day/1
 
 For part 1, we're given a list of numbers and are asked how many times the numbers increase relatively to the previous number. The solution is pretty straightforward: loop over the list, compare each item with the previous, count the occurrence where it's greater than the previous:
 
@@ -57,7 +61,9 @@ For the next days, I'm adding [`more-itertools`](https://pypi.org/project/more-i
 
 Check my repository for the [final code for day 1](https://github.com/rbusquet/advent-of-code/blob/main/2021/01/day1.py). See y'all tomorrow!
 
-## --- Day 2: Dive --- [[link]](https://adventofcode.com/2021/day/2)
+## Day 2: Dive!
+
+https://adventofcode.com/2021/day/2
 
 Today, we're piloting a submarine, which has a planned course defined by a series of instructions (our input):
 
