--- a/app/routes/posts/aoc-2021.md
+++ b/app/routes/posts/aoc-2021.md
@@ -109,3 +109,5 @@ for command in file:
             aim += int(distance)
 return horizontal * depth
 ```
+
+The final solution for day 2 is in my [aoc repository](https://github.com/rbusquet/advent-of-code/blob/main/2021/02/day2.py)!
