--- a/app/routes/posts/aoc-2021.md
+++ b/app/routes/posts/aoc-2021.md
@@ -10,6 +10,7 @@ meta:
 ```
                       ~   ~  ~ ~~ ~~~~~~~~~~~~~~~
                                            ..''''
+                                  .   .   :
 ```
 
 I'll be posting here my solutions for [AoC 2021](https://adventofcode). Follow along!
@@ -111,3 +112,63 @@ return horizontal * depth
 ```
 
 The final solution for day 2 is in my [aoc repository](https://github.com/rbusquet/advent-of-code/blob/main/2021/02/day2.py)!
+
+## Day 3: Binary Diagnostic
+
+https://adventofcode.com/2021/day/2
+
+On day 3, we're running diagnostics on the submarine. Our puzzle input is a list of binary number that can be decoded into information about the submarine.
+For part 1, we're checking **power consumption** by calculating two values: the **game rate**, determined by finding the **most common bit in the corresponding position** of all numbers in our input; and the **epsilon rate**, calculated similarly, but by finding the **less common bit**.
+
+My solution was a straighforward translation of the requirements into python code. I used `collection.Counter`s to count the bits for each position, retrieving the value using `Counter.most_common`.
+
+```python
+LENGTH = 12  # size of numbers in the report
+report = [line.strip() for line in file]
+
+def count(report: Iterable[str], position: int) -> Counter[str]:
+    return Counter([value[position] for value in report])
+
+counters: list[Counter[str]] = []
+for position in range(LENGTH):  # O(LENGTH)
+    counters.append(count(report, position))  # O(n)
+
+gamma = [counter.most_common()[0][0] for counter in counters]
+epsilon = [counter.most_common(2)[1][0] for counter in counters]
+return list_of_bits_to_int(gamma) * list_of_bits_to_int(epsilon)
+```
+
+Next, we're checking the **life support rating**, again by calculating two numbers, the **oxygen generator rating** and the **CO2 scrubber rating**. To be honest, the description of how to locate these values will be much more clear [in the actual puzzle](https://adventofcode.com/2021/day/2) than I'd be able to summarize. Let me just show you the code:
+
+```python
+report = list(parse(file))
+
+oxygen_report = co2_report = report  # keep a reference of the original reports
+for position in range(LENGTH):
+    counter = count(oxygen_report, position)  # count the bits at the posstion
+    most_common, total = counter.most_common()[0]
+    if len(oxygen_report) % 2 == 0 and total == len(oxygen_report) / 2:
+        most_common = "1"  # tie breaker
+
+    if len(oxygen_report) != 1:  # filter out the numbers in the report that matches the most common
+        oxygen_report = [
+            value for value in oxygen_report if value[position] == most_common
+        ]
+for position in range(LENGTH):
+    # same deal as the above--but we're filtering out the numbers that match the less common bit
+    counter = count(co2_report, position)
+    most_common, total = counter.most_common()[0]
+    if len(co2_report) % 2 == 0 and total == len(co2_report) / 2:
+        most_common = "1"
+
+    if len(co2_report) != 1:
+        co2_report = [
+            value for value in co2_report if value[position] != most_common
+        ]
+
+return list_of_bits_to_int(oxygen_report[0]) * list_of_bits_to_int(co2_report[0])
+```
+
+On day 3 I basically translated the requirements to python--I was surprised there weren't a lot of bitwise trickery to get to the solution. Now we wait for day 4. [Eric](http://was.tl/) likes to make us work on the weekends with these puzzles (See https://adventofcode.com/2020/day/5, https://adventofcode.com/2020/day/12...), so I'll be waiting for some fun work tomorrow.
+
+Check the full solution [here](https://github.com/rbusquet/advent-of-code/blob/main/2021/03/day3.py)!
