--- a/app/routes/posts/aoc-2021.md
+++ b/app/routes/posts/aoc-2021.md
@@ -11,6 +11,7 @@ meta:
                       ~   ~  ~ ~~ ~~~~~~~~~~~~~~~
                                            ..''''
                                   .   .   :
+                          .   . .'    ....'
 ```
 
 I'll be posting here my solutions for [AoC 2021](https://adventofcode). Follow along!
@@ -23,20 +24,26 @@ https://adventofcode.com/2021/day/1
 
 For part 1, we're given a list of numbers and are asked how many times the numbers increase relatively to the previous number. The solution is pretty straightforward: loop over the list, compare each item with the previous, count the occurrence where it's greater than the previous:
 
-```python
-with open(Path(__file__).parent / "input.txt") as file:
-    previous = int(file.readline())
-
-    increases = 0
-    for value in map(int, file):
-        increases += value > previous
-        previous = value
-    return increases
+```python3
+from pathlib import Path
+def part_1():
+    with open(Path(__file__).parent / "input.txt") as file:
+        previous = int(file.readline())
+    
+        increases = 0
+        for value in map(int, file):
+            increases += value > previous
+            previous = value
+        return increases
 ```
 
 For part 2, we're asked to consider the sum of a **three-measurement sliding window**. I thought I would need a `deque` to keep a list of 3 values, or use list comprehension + slices, when I remembered about [these recipes](https://docs.python.org/3/library/itertools.html#itertools-recipes) in the python docs. I copied over an implementation for a generator of these windows and used for my solution:
 
 ```python
+import collections
+from itertools import islice
+from pathlib import Path
+
 def sliding_window(iterable, n):
     # sliding_window('ABCDEFG', 4) -> ABCD BCDE CDEF DEFG
     it = iter(iterable)
@@ -47,15 +54,16 @@ def sliding_window(iterable, n):
         window.append(x)
         yield tuple(window)
 
-with open(Path(__file__).parent / "input.txt") as file:
-    it = sliding_window(map(int, file), 3)
-    previous = next(it)
-
-    increases = 0
-    for window in it:
-        increases += sum(window) > sum(previous)
-        previous = window
-    return increases
+def part_2():
+    with open(Path(__file__).parent / "input.txt") as file:
+        it = sliding_window(map(int, file), 3)
+        previous = next(it)
+    
+        increases = 0
+        for window in it:
+            increases += sum(window) > sum(previous)
+            previous = window
+        return increases
 ```
 
 For the next days, I'm adding [`more-itertools`](https://pypi.org/project/more-itertools/) to have these recipes readily available!
@@ -172,3 +180,65 @@ return list_of_bits_to_int(oxygen_report[0]) * list_of_bits_to_int(co2_report[0]
 On day 3 I basically translated the requirements to python--I was surprised there weren't a lot of bitwise trickery to get to the solution. Now we wait for day 4. [Eric](http://was.tl/) likes to make us work on the weekends with these puzzles (See https://adventofcode.com/2020/day/5, https://adventofcode.com/2020/day/12...), so I'll be waiting for some fun work tomorrow.
 
 Check the full solution [here](https://github.com/rbusquet/advent-of-code/blob/main/2021/03/day3.py)!
+
+
+## Day 4: Giant Squid
+
+https://adventofcode.com/2021/day/4
+
+As expected, a lot of work for me today, having to figure out a data model for storing a board of [bingo](https://en.wikipedia.org/wiki/Bingo_(American_version)). I won't go over the process to get to this class a lot, there are some duplicated data and for-loops that can be optimized, but I got to a solution and I think the class is pretty clear to understand. Follow along in comments to understand each part--here it goes:
+
+
+```python
+from dataclasses import field, dataclass
+
+@dataclass
+class Board:
+    numbers: dict[tuple[int, int], int] = field(default_factory=dict)
+    checked: dict[tuple[int, int], bool] = field(init=False, default_factory=dict)
+    all_numbers: dict[int, tuple[int, int]] = field(default_factory=dict, init=False)
+    _winner: bool = field(default=False, init=False)
+
+    def add_square(self, i: int, j: int, number: int) -> None:
+        """
+        Used to build the board, from numbers in the puzzle input.
+        I'm storing the checked state as a separate dictionary. A colleague solution
+        converted rows and columns into sets and compared to a set of the drawn numbers,
+        which is pretty clever
+        """
+        self.numbers[i, j] = number
+        self.checked[i, j] = False
+        self.all_numbers[number] = (i, j)
+
+    def unchecked(self) -> Iterator[int]:
+        """Yields the unchecked numbers on the board for score calculation."""
+        for i in range(BOARD_SIZE):
+            for j in range(BOARD_SIZE):
+                if not self.checked[i, j]:
+                    yield self.numbers[i, j]
+
+    def winner(self) -> bool:
+        """Checks if a board is the winner if all positions in a row or column are checked."""
+        if self._winner:
+            return self._winner
+        for i in range(BOARD_SIZE):
+            row_checked = all(self.checked[i, j] for j in range(BOARD_SIZE))
+            column_checked = all(self.checked[j, i] for j in range(BOARD_SIZE))
+            if row_checked or column_checked:
+                self._winner = True
+                return self._winner
+        return False
+
+    def check(self, number) -> None:
+        """'checks' a  drawn number against the board, marking it."""
+        if self.winner():
+            return
+        if number not in self.all_numbers:
+            return
+        i, j = self.all_numbers[number]
+        self.checked[i, j] = True
+```
+
+Check the rest of the game in [the repo](https://github.com/rbusquet/advent-of-code/blob/main/2021/04/day4.py), but it's basically a loop over the drawn numbers and all stored boards, calling `board.check()` and `board.winner()` to verify the states.
+
+Let's wait for Sunday's puzzle!
