--- a/app/routes/posts/aoc-2021.md
+++ b/app/routes/posts/aoc-2021.md
@@ -24,7 +24,7 @@ https://adventofcode.com/2021/day/1
 
 For part 1, we're given a list of numbers and are asked how many times the numbers increase relatively to the previous number. The solution is pretty straightforward: loop over the list, compare each item with the previous, count the occurrence where it's greater than the previous:
 
-```python3
+```python
 from pathlib import Path
 def part_1():
     with open(Path(__file__).parent / "input.txt") as file:
