new font, prettier

--- a/app/routes/posts/aoc-2021.md
+++ b/app/routes/posts/aoc-2021.md
@@ -14,7 +14,8 @@ meta:
                           .   . .'    ....'
 ```
 
-I'll be posting here my solutions for [AoC 2021](https://adventofcode). Follow along!
+I'll be posting here my solutions for [AoC 2021](https://adventofcode). Follow
+along!
 
 ### Table of contents
 
@@ -22,14 +23,17 @@ I'll be posting here my solutions for [AoC 2021](https://adventofcode). Follow a
 
 https://adventofcode.com/2021/day/1
 
-For part 1, we're given a list of numbers and are asked how many times the numbers increase relatively to the previous number. The solution is pretty straightforward: loop over the list, compare each item with the previous, count the occurrence where it's greater than the previous:
+For part 1, we're given a list of numbers and are asked how many times the
+numbers increase relatively to the previous number. The solution is pretty
+straightforward: loop over the list, compare each item with the previous, count
+the occurrence where it's greater than the previous:
 
 ```python
 from pathlib import Path
 def part_1():
     with open(Path(__file__).parent / "input.txt") as file:
         previous = int(file.readline())
-    
+
         increases = 0
         for value in map(int, file):
             increases += value > previous
@@ -37,7 +41,12 @@ def part_1():
         return increases
 ```
 
-For part 2, we're asked to consider the sum of a **three-measurement sliding window**. I thought I would need a `deque` to keep a list of 3 values, or use list comprehension + slices, when I remembered about [these recipes](https://docs.python.org/3/library/itertools.html#itertools-recipes) in the python docs. I copied over an implementation for a generator of these windows and used for my solution:
+For part 2, we're asked to consider the sum of a **three-measurement sliding
+window**. I thought I would need a `deque` to keep a list of 3 values, or use
+list comprehension + slices, when I remembered about
+[these recipes](https://docs.python.org/3/library/itertools.html#itertools-recipes)
+in the python docs. I copied over an implementation for a generator of these
+windows and used for my solution:
 
 ```python
 import collections
@@ -58,7 +67,7 @@ def part_2():
     with open(Path(__file__).parent / "input.txt") as file:
         it = sliding_window(map(int, file), 3)
         previous = next(it)
-    
+
         increases = 0
         for window in it:
             increases += sum(window) > sum(previous)
@@ -66,15 +75,20 @@ def part_2():
         return increases
 ```
 
-For the next days, I'm adding [`more-itertools`](https://pypi.org/project/more-itertools/) to have these recipes readily available!
+For the next days, I'm adding
+[`more-itertools`](https://pypi.org/project/more-itertools/) to have these
+recipes readily available!
 
-Check my repository for the [final code for day 1](https://github.com/rbusquet/advent-of-code/blob/main/2021/01/day1.py). See y'all tomorrow!
+Check my repository for the
+[final code for day 1](https://github.com/rbusquet/advent-of-code/blob/main/2021/01/day1.py).
+See y'all tomorrow!
 
 ## Day 2: Dive!
 
 https://adventofcode.com/2021/day/2
 
-Today, we're piloting a submarine, which has a planned course defined by a series of instructions (our input):
+Today, we're piloting a submarine, which has a planned course defined by a
+series of instructions (our input):
 
 - `forward X` **increases** the horizontal position by `X` units.
 - `down X` **increases** the depth by `X` units.
@@ -95,7 +109,9 @@ for command in file:
 return horizontal * depth
 ```
 
-The puzzle claim that the result doesn't make sense, and when checking the submarine manual we notice the intructions track not only horizontal position and depth, but also **aim**, and the commands are also entirely different:
+The puzzle claim that the result doesn't make sense, and when checking the
+submarine manual we notice the intructions track not only horizontal position
+and depth, but also **aim**, and the commands are also entirely different:
 
 - `down X` **increases** your aim by `X` units.
 - up X **decreases** your aim by `X` units.
@@ -119,16 +135,23 @@ for command in file:
 return horizontal * depth
 ```
 
-The final solution for day 2 is in my [aoc repository](https://github.com/rbusquet/advent-of-code/blob/main/2021/02/day2.py)!
+The final solution for day 2 is in my
+[aoc repository](https://github.com/rbusquet/advent-of-code/blob/main/2021/02/day2.py)!
 
 ## Day 3: Binary Diagnostic
 
 https://adventofcode.com/2021/day/2
 
-On day 3, we're running diagnostics on the submarine. Our puzzle input is a list of binary number that can be decoded into information about the submarine.
-For part 1, we're checking **power consumption** by calculating two values: the **game rate**, determined by finding the **most common bit in the corresponding position** of all numbers in our input; and the **epsilon rate**, calculated similarly, but by finding the **less common bit**.
+On day 3, we're running diagnostics on the submarine. Our puzzle input is a list
+of binary number that can be decoded into information about the submarine. For
+part 1, we're checking **power consumption** by calculating two values: the
+**game rate**, determined by finding the **most common bit in the corresponding
+position** of all numbers in our input; and the **epsilon rate**, calculated
+similarly, but by finding the **less common bit**.
 
-My solution was a straighforward translation of the requirements into python code. I used `collection.Counter`s to count the bits for each position, retrieving the value using `Counter.most_common`.
+My solution was a straighforward translation of the requirements into python
+code. I used `collection.Counter`s to count the bits for each position,
+retrieving the value using `Counter.most_common`.
 
 ```python
 LENGTH = 12  # size of numbers in the report
@@ -146,7 +169,11 @@ epsilon = [counter.most_common(2)[1][0] for counter in counters]
 return list_of_bits_to_int(gamma) * list_of_bits_to_int(epsilon)
 ```
 
-Next, we're checking the **life support rating**, again by calculating two numbers, the **oxygen generator rating** and the **CO2 scrubber rating**. To be honest, the description of how to locate these values will be much more clear [in the actual puzzle](https://adventofcode.com/2021/day/2) than I'd be able to summarize. Let me just show you the code:
+Next, we're checking the **life support rating**, again by calculating two
+numbers, the **oxygen generator rating** and the **CO2 scrubber rating**. To be
+honest, the description of how to locate these values will be much more clear
+[in the actual puzzle](https://adventofcode.com/2021/day/2) than I'd be able to
+summarize. Let me just show you the code:
 
 ```python
 report = list(parse(file))
@@ -177,17 +204,27 @@ for position in range(LENGTH):
 return list_of_bits_to_int(oxygen_report[0]) * list_of_bits_to_int(co2_report[0])
 ```
 
-On day 3 I basically translated the requirements to python--I was surprised there weren't a lot of bitwise trickery to get to the solution. Now we wait for day 4. [Eric](http://was.tl/) likes to make us work on the weekends with these puzzles (See https://adventofcode.com/2020/day/5, https://adventofcode.com/2020/day/12...), so I'll be waiting for some fun work tomorrow.
+On day 3 I basically translated the requirements to python--I was surprised
+there weren't a lot of bitwise trickery to get to the solution. Now we wait for
+day 4. [Eric](http://was.tl/) likes to make us work on the weekends with these
+puzzles (See https://adventofcode.com/2020/day/5,
+https://adventofcode.com/2020/day/12...), so I'll be waiting for some fun work
+tomorrow.
 
-Check the full solution [here](https://github.com/rbusquet/advent-of-code/blob/main/2021/03/day3.py)!
-
+Check the full solution
+[here](https://github.com/rbusquet/advent-of-code/blob/main/2021/03/day3.py)!
 
 ## Day 4: Giant Squid
 
 https://adventofcode.com/2021/day/4
 
-As expected, a lot of work for me today, having to figure out a data model for storing a board of [bingo](https://en.wikipedia.org/wiki/Bingo_(American_version)). I won't go over the process to get to this class a lot, there are some duplicated data and for-loops that can be optimized, but I got to a solution and I think the class is pretty clear to understand. Follow along in comments to understand each part--here it goes:
-
+As expected, a lot of work for me today, having to figure out a data model for
+storing a board of
+[bingo](<https://en.wikipedia.org/wiki/Bingo_(American_version)>). I won't go
+over the process to get to this class a lot, there are some duplicated data and
+for-loops that can be optimized, but I got to a solution and I think the class
+is pretty clear to understand. Follow along in comments to understand each
+part--here it goes:
 
 ```python
 from dataclasses import field, dataclass
@@ -239,6 +276,9 @@ class Board:
         self.checked[i, j] = True
 ```
 
-Check the rest of the game in [the repo](https://github.com/rbusquet/advent-of-code/blob/main/2021/04/day4.py), but it's basically a loop over the drawn numbers and all stored boards, calling `board.check()` and `board.winner()` to verify the states.
+Check the rest of the game in
+[the repo](https://github.com/rbusquet/advent-of-code/blob/main/2021/04/day4.py),
+but it's basically a loop over the drawn numbers and all stored boards, calling
+`board.check()` and `board.winner()` to verify the states.
 
 Let's wait for Sunday's puzzle!
