--- a/src/pages/posts/aoc-2021.md
+++ b/src/pages/posts/aoc-2021.md
@@ -1,8 +1,8 @@
 ---
-meta:
-  title: Advent of Code 2021
-  date: "2021-12-01"
-  description: Solutions + general comments for Advent of Code 2021
+layout: ../../layouts/PostLayout.astro
+title: Advent of Code 2021
+date: "2021-12-01"
+description: Solutions + general comments for Advent of Code 2021
 ---
 
 # Advent of Code 2021
