--- a/src/pages/posts/aoc-2021.md
+++ b/src/pages/posts/aoc-2021.md
@@ -1,18 +1,12 @@
 ---
 layout: ../../layouts/PostLayout.astro
-title: Advent of Code 2021
-date: "2021-12-01"
-description: Solutions + general comments for Advent of Code 2021
+meta:
+    title: Advent of Code 2021
+    date: "2021-12-01"
+    description: Solutions + general comments for Advent of Code 2021
 ---
 
 # Advent of Code 2021
-
-```
-                      ~   ~  ~ ~~ ~~~~~~~~~~~~~~~
-                                           ..''''
-                                  .   .   :
-                          .   . .'    ....'
-```
 
 I'll be posting here my solutions for [AoC 2021](https://adventofcode). Follow
 along!
